src/ui/lidarr_ui/library/snapshots/managarr__ui__lidarr_ui__library__album_details_ui__album_details_ui_tests__tests__snapshot_tests__album_details_renders_ManualAlbumSearchConfirmPrompt_2.snap
---
source: src/ui/lidarr_ui/library/album_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
             ╭  Test Album Details  ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮               
             │ Tracks │ History │ Manual Search                                                                                                      │               
             │───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│               
             │   Source ▼  Age        ⛔     Title                                        Indexer              Size         Peers        Quality      │               
             │=> torrent   1 days     ⛔     Test Release                                 kickass torrents     0.0 MB       2 / 1        Lossless     │               
             │   usenet    1 days     ⛔     Test Release                                 DrunkenSlug          0.0 MB                    Lossless     │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                    ╭─────────────────  Download Rejected Release  ──────────────────╮                                 │               
             │                                    │    Do you really want to download the rejected release: Test   │                                 │               
             │                                    │                            Release?                            │                                 │               
             │                                    │                                                                │                                 │               
             │                                    │                                                                │                                 │               
             │                                    │Rejection reasons:                                              │                                 │               
             │                                    │• Unknown quality profile                                       │                                 │               
             │                                    │• Release is already mapped                                     │                                 │               
             │                                    │                                                                │                                 │               
             │                                    │                                                                │                                 │               
             │                                    │                                                                │                                 │               
             │                                    │                                                                │                                 │               
             │                                    │                                                                │                                 │               
             │                                    │                                                                │                                 │               
             │                                    │                                                                │                                 │               
             │                                    │                                                                │                                 │               
             │                                    │╭──────────────────────────────╮╭──────────────────────────────╮│                                 │               
             │                                    ││              Yes             ││              No              ││                                 │               
             │                                    │╰──────────────────────────────╯╰──────────────────────────────╯│                                 │               
             │                                    ╰────────────────────────────────────────────────────────────────╯                                 │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
